--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "nodemon": "^2.0.19",
+    "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/socket.io": "^3.0.2"
   }
 }
